Fix formula-input styling in dark mode on fieldset cards.

--- a/less/variables/dark.less
+++ b/less/variables/dark.less
@@ -171,7 +171,7 @@
   }
 
   fieldset.card {
-    input:not([type=range]), select { --input-background-color: var(--dnd5e-background-25); }
+    input:not([type=range]), select, formula-input { --input-background-color: var(--dnd5e-background-25); }
     .input-element-tags .tag {
       --multi-select-tag-background: var(--dnd5e-background-25);
       --multi-select-tag-border: var(--dnd5e-color-blue-gray-3);
